--- a/.github/workflows/entrega.yml
+++ b/.github/workflows/entrega.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Install
         run: npm ci
       - name: Deploy
-        run: npm run deploy -- -r https://github.com/ricardofc/my-gh-pages-actions.git
+        run: npm run deploy -- -r git@github.com:ricardofc/my-gh-pages-actions.git
